[package]
name = "PhaestusFoxTutorials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1", features = ["dynamic"] }
bevy-inspector-egui = "0.9.0"
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls" }

[profile.dev.package."*"]
opt-level = 3 # Optimization level, 0-3. 3 is the highest. Makes everything run faster because better optimizations are used. BUT IT TAKES SO LONG TO COMPILE DEPENDING ON HOW BIG IT IS BUT LIKE DWABDUWADWA