[workspace]
resolver = "2"

[package]
name = "lockstep-multiplayer-experimenting"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.145"
bincode = "1.3.1"
renet = "0.0.9"
renet_visualizer = "0.0.2"
log = "0.4"
env_logger = "0.9.0"
rand = "0.8.4"
bevy = { version = "0.8.1" }
bevy_renet = "0.0.5"
anyhow = "1.0"
bevy_egui = "0.16.1"
iyes_loopless = "0.7.1"
chrono = "0.4.22"
bevy_asset_loader = "0.12.1"
bevy_asset_loader_derive = "0.12.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3