[workspace]
resolver = "2"

[package]
name = "lockstep-multiplayer-experimenting"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.87"
serde_derive = "1.0.147"
bincode = "1.3.3"
log = "0.4.17"
env_logger = "0.9.2"
rand = "0.8.5"
bevy = { version = "0.9.0" }
renet = "0.0.10"
renet_visualizer = "0.0.3"
bevy_renet = "0.0.6"
anyhow = "1.0.66"
bevy_egui = "0.17.1"
iyes_loopless = "0.9.0"
chrono = "0.4.22"
bevy_asset_loader = "0.13.0"
bevy_asset_loader_derive = "0.13.0"
bevy_mod_raycast = "0.7.0"
bevy_mod_picking = "0.10.0"
bevy_rapier3d = { version = "0.19.0", features = [ "enhanced-determinism", "debug-render" ] }
nalgebra = "0.31.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
