[package]
name = "tower-defense-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9.1" } # features = ["dynamic"] } if not on windows
bevy-inspector-egui = "0.17.0"
bevy_rapier3d = "0.20.0"
leafwing-input-manager = "0.8.0"
bevy_mod_picking = "0.11.0"
