[workspace]
resolver = "2"

[package]
name = "vampire-surviors-clone"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
bevy_rapier3d = "0.16.0"
bevy = { version = "0.8.0", default-features = false, features = ["bevy_core_pipeline", "bevy_asset", "bevy_render", "bevy_pbr", "x11"] }
bevy_renet = "0.0.5"
serde = { version = "1.0", features = [ "derive" ] }
bincode = "1.3.1"
bevy_egui = "0.16.0"
renet_visualizer = "0.0.2"
# TODO: when released, use new version with bevy 0.8
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras", rev="a1095b" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3