[package]
name = "vampire-survivors-clone"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
store = { path = "../store" }
anyhow = "1.0"
bevy = { version = "0.8.1"}
renet = "0.0.9"
bevy_renet = "0.0.5"
bincode="1.3.1"